manifests/do/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: howmanywins
spec:
  selector:
    matchLabels:
      app: howmanywins
  template:
    metadata:
      labels:
        app: howmanywins
    spec:
      containers:
        - name: web
          image: app:latest
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 5000
              name: http
          livenessProbe:
            httpGet:
              port: http
              path: "/"
