manifests/do/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: howmanywins
  labels:
    app: howmanywins
spec:
  selector:
    app: howmanywins
  ports:
    - name: http
      port: 80
      targetPort: 5000
