manifests/do/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-manager
  name: howmanywins
spec:
  rules:
  - host: howmanywinsdoesbrucebochyhave.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: howmanywins
            port:
              number: 80
  tls:
  - hosts:
    - howmanywinsdoesbrucebochyhave.com
    secretName: howmanywins-cert
